--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
 <body>
 <header></header>
 
+<div id="scene">
+<div id="baggrund"></div>
+<div id="bord"></div>
+<div id="stol"></div>
+<div id="doer"></div>
+
+<div id="noerd_container">
+  <div id="noerd_sprite"></div>
+</div>
+<div id="celeb_container">
+<div id="celeb_sprite"></div>
+</div>
+<div id="kvinde_container">
+<div id="kvinde_sprite"></div>
+</div>
+<div id="kat_container">
+<div id="kat_sprite"></div>
+</div>
+<div id="dreng_container">
+<div id="dreng_sprite"></div>
+</div>
+
+<div id="valg_question"></div>
+<div id="valg_ja"></div>
+<div id="valg_nej"></div>
+<div id="credit_antal_rigtige">
+<div id="info_box"></div>
+</div>
+
+</div>
+
 <footer></footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="index.js"></script>
