--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 <div id="credit_antal_rigtige">
 <div id="info_box"></div>
 </div>
+<div id="credit_try_again"></div>
+<div id="kea_logo"></div>
+<div id="privatsnak_logo"></div>
 
 </div>
 
