added forgrund css (skal rettes i illustrator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <div id="scene">
 <div id="baggrund"></div>
-<div id="bord"></div>
 <div id="stol"></div>
 <div id="doer"></div>
 
@@ -31,6 +30,8 @@
 <div id="dreng_container">
 <div id="dreng_sprite"></div>
 </div>
+
+<div id="forgrund"></div>
 
 <div id="valg_question"></div>
 <div id="valg_ja"></div>
