rettet de fleste lyd index tag

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
 
 </div>
 
+    <audio id="credit_musik" src="Feeling%20Happy%20Sound%20Effect.mp3"></audio>
+    <audio id="knap_lyd" src="knap.wav"></audio>
+    <audio id="miav" src="miav.wav"></audio>
+    <audio id="skrr" src="Skrr.mp3"></audio>
+    <audio id="grynt" src="Grynt.mp3"></audio>
+    <audio id="klasse_stoej" src="klassev%C3%A6relse.mp3"></audio>
+    <audio id="pift_kvinde" src="Pift_kvinde.mp3"></audio>
+    <audio id="doer_lyd" src="doer.wav"></audio>
+    <audio id="fodtrin_lyd" src="skridt.wav"></audio>
+    <audio id="blitz_lyd" src="iPhone%20Shutter%20#1%20Sound%20Effect.mp3"></audio>
+    <audio id="uhh_hallo_dreng" src="uhh_hallo_dreng.mp3"></audio>
+
 <footer></footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="index.js"></script>
