--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <audio id="skrr" src="Skrr.mp3"></audio>
     <audio id="grynt" src="Grynt.mp3"></audio>
     <audio id="klasse_stoej" src="klassev%C3%A6relse.mp3"></audio>
-    <audio id="pift_kvinde" src="Pift_kvinde.mp3"></audio>
+    <audio id="pift_kvinde" src="pift.mp3"></audio>
     <audio id="doer_lyd" src="doer.wav"></audio>
     <audio id="fodtrin_lyd" src="skridt.wav"></audio>
     <audio id="blitz_lyd" src="iPhone%20Shutter%20#1%20Sound%20Effect.mp3"></audio>
