added lyd og rettet baggrund

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <audio id="knap_lyd" src="knap.wav"></audio>
     <audio id="miav" src="miav.wav"></audio>
     <audio id="skrr" src="Skrr.mp3"></audio>
-    <audio id="grynt" src="Grynt.mp3"></audio>
+    <audio id="grynt" src="grynt.mp3"></audio>
     <audio id="klasse_stoej" src="klassev%C3%A6relse.mp3"></audio>
     <audio id="pift_kvinde" src="pift.mp3"></audio>
     <audio id="doer_lyd" src="doer.wav"></audio>
     <audio id="fodtrin_lyd" src="skridt.wav"></audio>
     <audio id="blitz_lyd" src="iPhone%20Shutter%20#1%20Sound%20Effect.mp3"></audio>
-    <audio id="uhh_hallo_dreng" src="uhh_hallo_dreng.mp3"></audio>
+    <audio id="uhh_hallo_dreng" src="uhh-hallo.mp3"></audio>
 
 <footer></footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
