--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <audio id="credit_musik" src="Feeling%20Happy%20Sound%20Effect.mp3"></audio>
     <audio id="knap_lyd" src="knap.wav"></audio>
     <audio id="miav" src="miav.wav"></audio>
-    <audio id="skrr" src="Skrr.mp3"></audio>
+    <audio id="skrr" src="skrr_rettet.mp3"></audio>
     <audio id="grynt" src="grynt.mp3"></audio>
     <audio id="klasse_stoej" src="klassev%C3%A6relse.mp3"></audio>
     <audio id="pift_kvinde" src="pift.mp3"></audio>
