--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <div id="dreng_sprite"></div>
 </div>
 
+<div id="phone_container">
+<div id="phone_sprite"></div>
+</div>
 <div id="forgrund"></div>
 
 <div id="valg_question"></div>
