move in og position in på alle karaktererne

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="doer"></div>
 
 <div id="noerd_container">
-  <div id="noerd_sprite"></div>
+  <div id="noerd_sprite" class="noerd_positionin"></div>
 </div>
 <div id="celeb_container">
 <div id="celeb_sprite"></div>
