added phone position in og ændret størrelse

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="doer"></div>
 
 <div id="noerd_container">
-  <div id="noerd_sprite" class="noerd_positionin"></div>
+  <div id="noerd_sprite"></div>
 </div>
 <div id="celeb_container">
 <div id="celeb_sprite"></div>
@@ -31,7 +31,7 @@
 <div id="dreng_sprite"></div>
 </div>
 
-<div id="phone_container">
+<div id="phone_container" class="phone_positionin">
 <div id="phone_sprite"></div>
 </div>
 <div id="forgrund"></div>
