scene flash added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="dreng_sprite"></div>
 </div>
 
-<div id="phone_container" class="phone_positionin">
+<div id="phone_container">
 <div id="phone_sprite"></div>
 </div>
 <div id="forgrund"></div>
