--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <div id="scene">
 <div id="baggrund"></div>
 <div id="stol"></div>
-<div id="doer"></div>
+
+<div id="doer_container">
+<div id="doer_sprite"></div>
+</div>
 
 <div id="noerd_container">
   <div id="noerd_sprite"></div>
