rette lyd blitz og added blitz scene i js

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <audio id="pift_kvinde" src="pift.mp3"></audio>
     <audio id="doer_lyd" src="doer.wav"></audio>
     <audio id="fodtrin_lyd" src="skridt.wav"></audio>
-    <audio id="blitz_lyd" src="iPhone%20Shutter%20#1%20Sound%20Effect.mp3"></audio>
+    <audio id="blitz_lyd" src="blitz_lyd.mp3"></audio>
     <audio id="uhh_hallo_dreng" src="uhh-hallo.mp3"></audio>
 
 <footer></footer>
