credit rettet css og js

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <div id="valg_question"></div>
 <div id="valg_ja"></div>
 <div id="valg_nej"></div>
-<div id="credit_antal_rigtige">
+<div id="credit_antal_rigtige"></div>
+<div id="credit_antal_forkert"></div>
 <div id="info_box"></div>
-</div>
 <div id="credit_try_again"></div>
 <div id="kea_logo"></div>
 <div id="privatsnak_logo"></div>
