--- a/forside.html
+++ b/forside.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-    <div id="scene"></div>
+    <div id="scene">
+    <div id="baggrund"></div>
+        <div id="logo_click"><a href="index.html"></a></div>
+    </div>
 
 <audio id="credit_musik" src="Feeling%20Happy%20Sound%20Effect.mp3"></audio>
 
