forside og logo rettet

--- a/forside.html
+++ b/forside.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click - Og Del</title>
+    <link rel="stylesheet" href="forside.css" type="text/css">
 </head>
 
 <body>
@@ -14,9 +15,6 @@
 
 <audio id="credit_musik" src="Feeling%20Happy%20Sound%20Effect.mp3"></audio>
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="index.js"></script>
 
 </body>
 </html>
