--- a/forside.html
+++ b/forside.html
@@ -9,8 +9,9 @@
 
 <body>
     <div id="scene">
+    <a href="index.html">START</a>
     <div id="baggrund"></div>
-        <div id="logo_click"><a href="index.html"></a></div>
+        <div id="logo_click"></div>
     </div>
 
 <audio id="credit_musik" src="Feeling%20Happy%20Sound%20Effect.mp3"></audio>
