rettet grynt css html js

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <audio id="knap_lyd" src="knap.wav"></audio>
     <audio id="miav" src="miav2.mp3"></audio>
     <audio id="skrr" src="skrr_rettet.mp3"></audio>
-    <audio id="grynt" src="grynt.mp3"></audio>
+    <audio id="grynt" src="noerd_lyd_rettet_ny.mp3"></audio>
     <audio id="klasse_stoej" src="klassev%C3%A6relse.mp3"></audio>
     <audio id="pift_kvinde" src="pift2.mp3"></audio>
     <audio id="doer_lyd" src="doer.wav"></audio>
