added link til privatsnak html css js

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <div id="credit_try_again"></div>
 <div id="kea_logo"></div>
 <div id="privatsnak_logo"></div>
+<div id="link_privatsnak"><a href="http://privatsnak.dk/">www.privatsnak.dk</a></div>
 
 </div>
 
