--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click - Og Del</title>
     <link rel="stylesheet" href="index.css" type="text/css">
+
+    <link rel="icon" type="image/png" sizes="180x180" href="Index_ikon-01.png">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="Nav%20Ikon-01.png">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="fav_ikon-01.png">
+
 </head>
 
 <body>
