rettet music credit

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </div>
 
-    <audio id="credit_musik" src="Feeling%20Happy%20Sound%20Effect.mp3"></audio>
+    <audio id="credit_musik" src="bensound-ukulele.mp3"></audio>
     <audio id="knap_lyd" src="knap.wav"></audio>
     <audio id="miav" src="miav2.mp3"></audio>
     <audio id="skrr" src="skrr_rettet.mp3"></audio>
