--- a/forside.html
+++ b/forside.html
@@ -20,7 +20,7 @@
         <div id="logo_click"></div>
     </div>
 
-<audio id="credit_musik" src="Feeling%20Happy%20Sound%20Effect.mp3"></audio>
+<audio id="credit_musik" src="bensound-ukulele.mp3"></audio>
 
 
 </body>
