added script kode til forside

--- a/forside.html
+++ b/forside.html
@@ -22,6 +22,8 @@
 
 <audio id="credit_musik" src="bensound-ukulele.mp3"></audio>
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="forside.js"></script>
 
 </body>
 </html>
